update cv and publications, remove the others

--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Yunfan Gao"
-  avatar           : "profile.png"
+  avatar           : "yunfan.jpg"
   bio              : "Ph.D. student at Robert Bosch GmbH Corporate Research"
   location         : "Renningen, Germany"
   employer         :
