--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ locale                   : "en-US"
 title                    : "Yunfan Gao"
 title_separator          : "-"
 name                     : &name "Your Name"
-description              : &description "Ph.D. student at Robert Bosch GmbH Corporate Research"
+description              : &description "Ph.D. student at Robert Bosch GmbH Corporate Research and University of Freiburg"
 url                      : https://yf-gao.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "yf-gao.github.io"
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Yunfan Gao"
   avatar           : "yunfan.jpg"
-  bio              : "Ph.D. student at Robert Bosch GmbH Corporate Research"
+  bio              : "Ph.D. student at Robert Bosch GmbH Corporate Research and University of Freiburg"
   location         : "Renningen, Germany"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
